--- a/deer-static-about/index.html
+++ b/deer-static-about/index.html
@@ -7,8 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1.00001, viewport-fit=cover"
     />
-    <title>deer.social | about</title>
-    <meta http-equiv="refresh" content="0;url=https://github.com/a-viv-a/deer-social">
+    <title>social.daniela.lol | about</title>
+    <meta http-equiv="refresh" content="0;url=https://github.com/danielah05/deer-social">
 
     <link rel="preload" as="font" type="font/woff2" href="/static/media/InterVariable.c504db5c06caaf7cdfba.woff2" crossorigin>
     
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="sakura.css" type="text/css">
   </head>
   <script type="text/javascript">
-      window.location.href = "https://github.com/a-viv-a/deer-social";
+      window.location.href = "https://github.com/danielah05/deer-social";
   </script>
   <body>
     <h1>redirecting to github readme...</h1>
