--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="theme-color" content="#4b9b6c">
+    <meta name="theme-color" content="#8e4b9b">
     <!--
       This viewport works for phones with notches.
       It's optimized for gestures by disabling global zoom.
