--- a/deer-static-about/index.html
+++ b/deer-static-about/index.html
@@ -7,8 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1.00001, viewport-fit=cover"
     />
-    <title>deer-social-ayla | about</title>
-    <meta http-equiv="refresh" content="0;url=https://github.com/ayla6/deer-social-test">
+    <title>Deer | about</title>
+    <meta http-equiv="refresh" content="0;url=https://github.com/goblinkingdev/deer-social">
 
     <link rel="preload" as="font" type="font/woff2" href="/static/media/InterVariable.c504db5c06caaf7cdfba.woff2" crossorigin>
 
