--- a/deer-static-about/privacy.html
+++ b/deer-static-about/privacy.html
@@ -11,7 +11,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1.00001, viewport-fit=cover"
     />
-    <title>deer-social-ayla | privacy policy</title>
+    <title>Deer | privacy policy</title>
 
     <link rel="preload" as="font" type="font/woff2" href="/static/media/InterVariable.c504db5c06caaf7cdfba.woff2" crossorigin>
 
@@ -22,27 +22,27 @@
   <body>
 
 
-    <h1>deer-social-ayla Privacy Policy</h1>
+    <h1>Deer Privacy Policy</h1>
 
     <p><em><strong>Last Updated:</strong> May 07, 2025</em></p>
 
-    <p>Welcome to deer-social-ayla. This privacy policy explains our approach to your data when you use our application.</p>
+    <p>Welcome to Deer. This privacy policy explains our approach to your data when you use our application.</p>
 
-    <h2>No Data Collection by deer-social-ayla</h2>
-    <p><strong>The deer-social-ayla application itself does not collect, store, track, or share any of your personal information or user data.</strong> We do not operate servers that store your account details, posts, or activity logs.</p>
+    <h2>No Data Collection by Deer</h2>
+    <p><strong>The Deer application itself does not collect, store, track, or share any of your personal information or user data.</strong> We do not operate servers that store your account details, posts, or activity logs.</p>
     <p>Our application functions solely as a client interface to interact with the underlying Bluesky social network (AT Protocol).</p>
 
     <h2>Reliance on Third-Party Services (AppView and PDS)</h2>
-    <p>When you use deer-social-ayla, you connect to the Bluesky network through a specific AppView and your chosen Personal Data Server (PDS). These services are responsible for storing and managing your account information, posts, social graph, and other associated data.</p>
-    <p><strong>Your data handling and privacy are governed by the Terms of Service and Privacy Policies of the specific AppView and PDS you use.</strong> deer-social-ayla simply acts on your behalf to communicate with these services based on the credentials you provide locally on your device.</p>
+    <p>When you use Deer, you connect to the Bluesky network through a specific AppView and your chosen Personal Data Server (PDS). These services are responsible for storing and managing your account information, posts, social graph, and other associated data.</p>
+    <p><strong>Your data handling and privacy are governed by the Terms of Service and Privacy Policies of the specific AppView and PDS you use.</strong> Deer simply acts on your behalf to communicate with these services based on the credentials you provide locally on your device.</p>
     <p>We strongly recommend you review the policies of your chosen PDS provider and the AppView you are using. For reference, the Privacy Policy for the default Bluesky service (AppView provided by <a href="https://bsky.social" target="_blank" rel="noopener noreferrer">bsky.social</a>) can be found here:</p>
     <p><a href="https://bsky.social/about/support/privacy-policy" target="_blank" rel="noopener noreferrer">https://bsky.social/about/support/privacy-policy</a></p>
 
     <h2>Data Stored Locally on Your Device</h2>
-    <p>To function, deer-social-ayla may store your login credentials or temporary session information on your own device. This data is not accessed by or transmitted to us.</p>
+    <p>To function, Deer may store your login credentials or temporary session information on your own device. This data is not accessed by or transmitted to us.</p>
 
     <h2>Cookies and Analytics</h2>
-    <p>deer-social-ayla does not use cookies or any tracking analytics.</p>
+    <p>Deer does not use cookies or any tracking analytics.</p>
 
     <h2>Changes to This Policy</h2>
     <p>We may update this policy. If we do, we will update the "Effective Date" at the top of this page.</p>
