ok deer as the app name is nicer than showing deer-social-ayla everywhere

--- a/deer-static-about/index.html
+++ b/deer-static-about/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1.00001, viewport-fit=cover"
     />
-    <title>deer-social-ayla | about</title>
+    <title>Deer | about</title>
     <meta http-equiv="refresh" content="0;url=https://github.com/ayla6/deer-social-test">
 
     <link rel="preload" as="font" type="font/woff2" href="/static/media/InterVariable.c504db5c06caaf7cdfba.woff2" crossorigin>
