--- a/deer-static-about/tos.html
+++ b/deer-static-about/tos.html
@@ -11,7 +11,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1.00001, viewport-fit=cover"
     />
-    <title>deer-social-ayla.pages.dev | terms of service</title>
+    <title>deer.aylac.top | terms of service</title>
 
     <link rel="preload" as="font" type="font/woff2" href="/static/media/InterVariable.c504db5c06caaf7cdfba.woff2" crossorigin>
 
@@ -22,26 +22,26 @@
   <body>
 
 
-<h1>Terms of Service for deer-social-ayla.pages.dev</h1>
+<h1>Terms of Service for deer.aylac.top</h1>
 
 <p><em><strong>Last Updated:</strong> May 07, 2025</em></p>
 
 <h2>Introduction</h2>
-<p>Welcome to deer-social-ayla.pages.dev! These Terms of Service ("Terms") govern your use of the deer-social-ayla.pages.dev application ("App"). By accessing or using the App, you agree to be bound by these Terms.</p>
+<p>Welcome to deer.aylac.top! These Terms of Service ("Terms") govern your use of the deer.aylac.top application ("App"). By accessing or using the App, you agree to be bound by these Terms.</p>
 
 <h2>Your Agreement</h2>
-<p>Using deer-social-ayla.pages.dev signifies your acceptance of these Terms. Please also review our <a href="/privacy">Privacy Policy</a>, which explains how we handle data related to the App itself.</p>
+<p>Using deer.aylac.top signifies your acceptance of these Terms. Please also review our <a href="/privacy">Privacy Policy</a>, which explains how we handle data related to the App itself.</p>
 
 <h2>Relationship to Other Services and Platforms</h2>
-<p>deer-social-ayla.pages.dev functions as a client or interface. It allows you to interact with decentralized social media protocols, instances, or servers (your "AppView" or "Personal Data Server" / "PDS").</p>
-<p><strong>Important:</strong> deer-social-ayla.pages.dev does not host your data or control the underlying networks or servers you connect to. Your interaction with these third-party services, including the content you post and view, is governed by the Terms of Service, acceptable use policies, and privacy policies of the specific AppView and/or PDS you choose to use.</p>
+<p>deer.aylac.top functions as a client or interface. It allows you to interact with decentralized social media protocols, instances, or servers (your "AppView" or "Personal Data Server" / "PDS").</p>
+<p><strong>Important:</strong> deer.aylac.top does not host your data or control the underlying networks or servers you connect to. Your interaction with these third-party services, including the content you post and view, is governed by the Terms of Service, acceptable use policies, and privacy policies of the specific AppView and/or PDS you choose to use.</p>
 <p>You are responsible for understanding and complying with the terms of those external services.</p>
 
 <p>We strongly recommend you review the policies of your chosen PDS provider and the AppView you are using. For reference, the Terms of Service for the default Bluesky service (AppView provided by <a href="https://bsky.social" target="_blank" rel="noopener noreferrer">bsky.social</a>) can be found here: </p>
 <p><a href="https://bsky.social/about/support/tos" target="_blank" rel="noopener noreferrer">https://bsky.social/about/support/tos</a></p>
 
 <h2>User Conduct</h2>
-<p>Your conduct while using deer-social-ayla.pages.dev must comply with the terms and rules set forth by the AppView and PDS you are connected to. deer-social-ayla.pages.dev is merely a tool to access these services, and Ayla is not responsible for enforcing the rules of those platforms or for the content accessed through them.</p>
+<p>Your conduct while using deer.aylac.top must comply with the terms and rules set forth by the AppView and PDS you are connected to. deer.aylac.top is merely a tool to access these services, and Ayla is not responsible for enforcing the rules of those platforms or for the content accessed through them.</p>
 
 <h2>Disclaimer of Warranty</h2>
 <p>The App is provided "AS IS" and "AS AVAILABLE," without warranty of any kind, express or implied. Ayla does not warrant that the App will meet your requirements, be available uninterrupted, secure, or error-free.</p>
